--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Flags below are optional
 #
 
+timezone: Asia/Seoul
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
@@ -49,9 +51,20 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: kramdown
+markdown: redcarpet
 highlighter: pygments
 permalink: /:title/
+
+redcarpet:
+    extensions: 
+      - no_intra_emphasis
+      - fenced_code_blocks
+      - tables
+      - strikethrough
+      - superscript
+      - autolink
+      - hard_wrap
+      - footnotes
 
 # The release of Jekyll Now that you're using
 version: v1.0.0
@@ -59,12 +72,13 @@ version: v1.0.0
 # Set the Sass partials directory, as we're using @imports
 sass:
   sass_dir: _scss
-  style: :expanded # You might prefer to minify using :compressed
+  style: :compressed # You might prefer to minify using :compressed
 
 # Use the following plug-ins
 gems:
   - jemoji # Emoji please!
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-redirect-from
 
 # Exclude these files from your production _site
 exclude:
@@ -72,3 +86,5 @@ exclude:
     - Gemfile.lock
     - LICENSE
     - README.md
+
+paginate: 4
