--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Hojoon Ji
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Tech News
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/936254?v=3&s=140
