--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ timezone: Asia/Seoul
 footer-links:
   dribbble: 
   email: sleeperbus@gmail.com
-  facebook: https://www.facebook.com/sleeperbus
+  facebook: 
   flickr: 
   github: sleeperbus
   instagram: 
