--- a/_config.yml
+++ b/_config.yml
@@ -1,91 +1,138 @@
-#
-# This file contains configuration flags to customize your site
-#
+# --- Serving options --- #
 
-# Name of your site (displayed in the header)
-name: sleeperbus
+# url is the full website URL
+# baseurl is the website's URL without the hostname
 
-# Short bio or description (displayed in the header)
-description: News / Tech
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/936254?v=3&s=140
-#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
-#
-
-timezone: Asia/Seoul
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble: 
-  email: sleeperbus@gmail.com
-  facebook: 
-  flickr: 
-  github: sleeperbus
-  instagram: 
-  linkedin: 
-  pinterest: 
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: sleeperbus
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-
-# Your disqus shortname, entering this will enable commenting on posts
-disqus: 
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: 
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url: 
-
-# If you're hosting your site at a Project repository on GitHub pages 
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
+# If you are building a simple GitHub user page (username.github.io) then use these settings:
+url: "http://sleeperbus.github.io"
 baseurl: ""
 
-#
-# !! You don't need to change any of the configuration flags below !!
-#
+# If you are building a GitHub project page then use these settings:
+#url: "http://username.github.io/projectname"
+#baseurl: "/projectname"
 
-markdown: redcarpet
+# Of course don't forget to change the username and projectname to YOUR username and project
+
+# Name of website
+title: sleeperbus
+
+# Short description of your site
+description: News / Tech
+
+# --- Navigation bar options --- #
+
+# Image to show in the navigation bar - image must be a square (width = height)
+# Remove this parameter if you don't want an image in the navbar
+avatar: "https://avatars1.githubusercontent.com/u/936254?v=3&s=140"
+
+# List of links in the navigation bar
+navbar-links:
+  Home: ""
+  About Me: "aboutme"
+  Contact: "contact"
+  
+# --- Footer options --- #
+
+# Change all these values or delete the ones you don't want.
+# Important: you must keep the "name" parameter, everything else you can remove
+author:
+  name: sleeperbus
+  email: "sleeperbus@gmail.com"
+  github: sleeperbus    # eg. daattali
+  twitter: sleeperbus   # eg. daattali
+ 
+# Select which links to show in the footer
+footer-links-active:
+  rss: true
+  email: true
+  twitter: true
+  github: true
+
+# How to display the link to the website in the footer
+# Remove this if you don't want a link in the footer
+#url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+
+# --- Misc --- #
+
+# Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
+#disqus: ""
+
+# Fill in your Google Analytics ID to track your website using GA
+#google_analytics: ""
+
+# --- Don't need to touch anything below here (but you can if you want) --- #
+
+# Output options (more information on Jekyll's site)
+timezone: "Korea/Seoul"
+markdown: kramdown
 highlighter: pygments
-permalink: /:title/
+permalink: /:year-:month-:day-:title
+paginate: 5
 
-redcarpet:
-    extensions: 
-      - no_intra_emphasis
-      - fenced_code_blocks
-      - tables
-      - strikethrough
-      - superscript
-      - autolink
-      - hard_wrap
-      - footnotes
+# Default YAML values (more information on Jekyll's site)
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      comments: true  # add comments to all blog posts
+  -
+    scope:
+      path: "" # all files
+    values:
+      layout: "default"
 
-# The release of Jekyll Now that you're using
-version: v1.0.0
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  sass_dir: _scss
-  style: :compressed # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jemoji # Emoji please!
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-redirect-from
-
-# Exclude these files from your production _site
+# Exclude these files from production site
 exclude:
-    - Gemfile
-    - Gemfile.lock
-    - LICENSE
-    - README.md
+  - CNAME
+  - LICENSE
+  - README.md
 
-paginate: 4
+# prose.io config
+prose:
+  rooturl: '_posts'
+  media: 'img'
+  ignore:
+    - 404.html
+    - LICENSE
+    - feed.xml
+    - _config.yml
+    - /_layouts
+    - /_includes
+    - /css
+    - /img
+    - /js
+  metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Post title"
+          placeholder: "Title"
+          alterable: true
+      - name: "subtitle"
+        field:
+          element: "textarea"
+          label: "Subtitle"
+          placeholder: "A description of your post."
+          alterable: true
+      - name: "date"
+        field:
+          element: "text"
+          label: "Date"
+          help: "Enter date of post."
+          placeholder: "yyyy-mm-dd"
+          alterable: true
+      - name: "published"
+        field:
+          element: "checkbox"
+          label: "Publish"
+          help: "Check to publish post, uncheck to hide."
+  
+# Beautiful Jekyll / Dean Attali
+# 2fc73a3a967e97599c9763d05e564189
