--- a/_config.yml
+++ b/_config.yml
@@ -55,10 +55,10 @@ footer-links-active:
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "sleeperbus"
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+#google_analytics: "UA-69061944-1"
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
